--- a/pagination.html
+++ b/pagination.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>API Pagination Example</title>
     <style>
+      body{
+        margin: 0;
+        padding: 0;
+      }
       .pagination {
         display: flex;
         list-style: none;
