Defualt Page Nmber is set to 5

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    ad[d[awmeo[dma[we[dakwedqowd]]]]]
+    
     <h3>svpsdpdfpdjfpofpfjm</h3>
     <h2>adcapdaposocmasqq</h2>
     <button>hiii</button>
-</body>dgsdpjgae eryr;yjxr/t
+</body>
 </html>
